--- a/client/package.json
+++ b/client/package.json
@@ -18,12 +18,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
     "apexcharts": "^3.49.1",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "flowbite-react": "^0.9.0",
-    "chart.js": "^4.4.3",
+    "intersection-observer": "^0.12.2",
     "lucide": "^0.379.0",
     "lucide-react": "^0.379.0",
     "react": "^18.3.1",
@@ -31,10 +33,12 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-intersection-observer": "^9.10.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
