--- a/client/package.json
+++ b/client/package.json
@@ -20,21 +20,23 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.49.1",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "flowbite-react": "^0.9.0",
-    "chart.js": "^4.4.3",
     "lucide": "^0.379.0",
     "lucide-react": "^0.379.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
