--- a/client/package.json
+++ b/client/package.json
@@ -20,18 +20,19 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.49.1",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
+    "date-fns": "^3.6.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "flowbite-react": "^0.9.0",
-    "chart.js": "^4.4.3",
     "lucide": "^0.379.0",
     "lucide-react": "^0.379.0",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.4.1",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
