--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@files-ui/react": "^1.2.4",
     "@fontsource/roboto": "^5.0.13",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
@@ -33,8 +34,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.4.1",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.10.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
