--- a/client/package.json
+++ b/client/package.json
@@ -35,12 +35,13 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-draft-wysiwyg": "^1.15.0",
-    "react-intersection-observer": "^9.10.3",
     "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.10.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^2.1.4"
   },
