--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "nodemon": "^3.1.0",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
-    "passport-strategy": "^1.0.0"
+    "passport-strategy": "^1.0.0",
+    "socket.io": "^4.7.5"
   }
 }
