--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "typewriter-effect": "^2.21.0",
+    "use-count-up": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
