--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "intersection-observer": "^0.12.2",
     "lucide": "^0.379.0",
     "lucide-react": "^0.379.0",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
