--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,12 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@jwplayer/jwplayer-react": "^1.1.3",
+    "@material-ui/styles": "^4.11.5",
     "@mui/joy": "^5.0.0-beta.36",
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.16",
+    "@mui/styles": "^5.15.21",
     "@reduxjs/toolkit": "^2.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -30,6 +33,7 @@
     "intersection-observer": "^0.12.2",
     "lucide": "^0.379.0",
     "lucide-react": "^0.379.0",
+    "material-ui-popup-state": "^5.1.2",
     "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
@@ -39,12 +43,14 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.10.3",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "socket.io-client": "^4.7.5",
     "typewriter-effect": "^2.21.0",
+    "use-count-up": "^3.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
