--- a/server/package.json
+++ b/server/package.json
@@ -33,7 +33,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-strategy": "^1.0.0",
     "request": "^2.88.2",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
     "socket.io": "^4.7.5"
   }
 }
