--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "socket.io-client": "^4.7.5",
     "typewriter-effect": "^2.21.0",
     "use-count-up": "^3.0.1",
+    "use-debounce": "^10.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
