--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "flowbite-react": "^0.9.0",
+    "html-react-parser": "^5.1.10",
     "intersection-observer": "^0.12.2",
     "lucide": "^0.379.0",
     "lucide-react": "^0.379.0",
@@ -44,6 +45,7 @@
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.10.3",
     "react-player": "^2.16.0",
+    "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.22.2",
     "react-scripts": "5.0.1",
