--- a/server/package.json
+++ b/server/package.json
@@ -28,12 +28,13 @@
     "mongoose": "^8.2.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.0",
     "passport": "^0.5.3",
     "passport-google-oauth20": "^2.0.0",
     "passport-strategy": "^1.0.0",
     "request": "^2.88.2",
-    "uuid": "^10.0.0",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "uuid": "^10.0.0"
   }
 }
