--- a/client/package.json
+++ b/client/package.json
@@ -55,7 +55,8 @@
     "typewriter-effect": "^2.21.0",
     "use-count-up": "^3.0.1",
     "use-debounce": "^10.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "swiper": "^8.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -85,7 +86,6 @@
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "react-icons": "^4.4.0",
-    "swiper": "^8.2.4",
     "tailwindcss": "^3.4.3"
   }
 }
