--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci --legacy-peer-deps
+RUN npm i --legacy-peer-deps
 
 # Copy source code
 COPY . .
