--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,31 +1,10 @@
-# Build stage
-FROM node:18-alpine AS build
-
-WORKDIR /app
-
-# Copy package files
-COPY package*.json ./
-
-# Install dependencies
-RUN npm i --legacy-peer-deps
-
-# Copy source code
-COPY . .
-
-# Build the app
-RUN npm run build
-
-# Production stage
 FROM nginx:alpine
 
-# Copy built app from build stage
-COPY --from=build /app/build /usr/share/nginx/html
+# Copy build đã upload sẵn
+COPY build /usr/share/nginx/html
 
-# Copy nginx configuration
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# (Tuỳ chọn) Copy config nếu dùng React Router
+# COPY nginx.conf /etc/nginx/conf.d/default.conf
 
-# Expose port 80
 EXPOSE 80
-
-# Start nginx
-CMD ["nginx", "-g", "daemon off;"] 
+CMD ["nginx", "-g", "daemon off;"]
