--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -25,13 +25,17 @@ http {
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
 
-        # Client routes
+        # React Client (SPA) routes
         location / {
             proxy_pass http://client;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            # Fix F5 404 cho React Router
+            index index.html;
+            error_page 404 /index.html;
         }
 
         # API routes
@@ -98,4 +102,4 @@ http {
     #     
     #     # Same location blocks as above
     # }
-} 
+}
