--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -11,21 +11,32 @@ http {
         server server:8000;
     }
 
-    # Rate limiting
-    limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
-    limit_req_zone $binary_remote_addr zone=login:10m rate=5r/m;
-
+    # HTTP server: chỉ để certbot xác minh & redirect sang HTTPS
     server {
         listen 80;
-        server_name localhost;
+        server_name brainity.duckdns.org
 
-        # Security headers
-        add_header X-Frame-Options "SAMEORIGIN" always;
-        add_header X-XSS-Protection "1; mode=block" always;
-        add_header X-Content-Type-Options "nosniff" always;
-        add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
 
-        # React Client (SPA) routes
+        location / {
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # HTTPS server
+    server {
+        listen 443 ssl http2;
+        server_name brainity.duckdns.org
+
+        ssl_certificate /etc/letsencrypt/live/brainity.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/brainity.duckdns.org/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
+
+        # React SPA
         location / {
             proxy_pass http://client;
             proxy_set_header Host $host;
@@ -33,14 +44,12 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Fix F5 404 cho React Router
             index index.html;
             error_page 404 /index.html;
         }
 
-        # API routes
+        # API
         location /api/ {
-            limit_req zone=api burst=20 nodelay;
             proxy_pass http://server;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -48,26 +57,14 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Auth routes
-        location /auth/ {
-            limit_req zone=login burst=5 nodelay;
-            proxy_pass http://server;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Upload routes
+        # Uploads
         location /uploads/ {
             proxy_pass http://server;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # WebSocket support
+        # WebSocket
         location /socket.io/ {
             proxy_pass http://server;
             proxy_http_version 1.1;
@@ -78,28 +75,5 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-
-        # Health check
-        location /health {
-            access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
-        }
     }
-
-    # HTTPS configuration (uncomment for production)
-    # server {
-    #     listen 443 ssl http2;
-    #     server_name localhost;
-    #     
-    #     ssl_certificate /etc/nginx/ssl/cert.pem;
-    #     ssl_certificate_key /etc/nginx/ssl/key.pem;
-    #     
-    #     # SSL configuration
-    #     ssl_protocols TLSv1.2 TLSv1.3;
-    #     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
-    #     ssl_prefer_server_ciphers off;
-    #     
-    #     # Same location blocks as above
-    # }
 }
