--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,18 +3,18 @@ events {
 }
 
 http {
-    upstream client {
+    upstream frontend {
         server client:80;
     }
 
-    upstream server {
+    upstream backend {
         server server:8000;
     }
 
     # HTTP server: chỉ để certbot xác minh & redirect sang HTTPS
     server {
         listen 80;
-        server_name brainity.duckdns.org
+        server_name brainity.duckdns.org;
 
         location /.well-known/acme-challenge/ {
             root /var/www/certbot;
@@ -28,7 +28,7 @@ http {
     # HTTPS server
     server {
         listen 443 ssl http2;
-        server_name brainity.duckdns.org
+        server_name brainity.duckdns.org;
 
         ssl_certificate /etc/letsencrypt/live/brainity.duckdns.org/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/brainity.duckdns.org/privkey.pem;
@@ -38,19 +38,21 @@ http {
 
         # React SPA
         location / {
-            proxy_pass http://client;
+            proxy_pass http://frontend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            index index.html;
-            error_page 404 /index.html;
+            # Nếu muốn fallback SPA từ Nginx, cần copy build React vào container Nginx
+            # root /usr/share/nginx/html;
+            # index index.html;
+            # try_files $uri /index.html;
         }
 
         # API
         location /api/ {
-            proxy_pass http://server;
+            proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -59,14 +61,14 @@ http {
 
         # Uploads
         location /uploads/ {
-            proxy_pass http://server;
+            proxy_pass http://backend;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
 
         # WebSocket
         location /socket.io/ {
-            proxy_pass http://server;
+            proxy_pass http://backend;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
@@ -74,6 +76,9 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_read_timeout 600s;
+            proxy_send_timeout 600s;
         }
     }
 }
