--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,7 +27,8 @@ http {
 
     # HTTPS server
     server {
-        listen 443 ssl http2;
+        listen 443 ssl;
+        http2 on;
         server_name brainity.duckdns.org;
 
         ssl_certificate /etc/letsencrypt/live/brainity.duckdns.org/fullchain.pem;
@@ -44,7 +45,7 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Nếu muốn fallback SPA từ Nginx, cần copy build React vào container Nginx
+            # Nếu muốn Nginx fallback SPA trực tiếp
             # root /usr/share/nginx/html;
             # index index.html;
             # try_files $uri /index.html;
