--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,12 +1,18 @@
-server {
-    listen 80;
-    server_name brainity.duckdns.org;
+events {
+    worker_connections 1024;
+}
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
-    }
+http {
+    server {
+        listen 80;
+        server_name brainity.duckdns.org;
 
-    location / {
-        return 200 "Temporary HTTP server for Certbot\n";
+        location /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+
+        location / {
+            return 200 "Temporary HTTP server for Certbot\n";
+        }
     }
 }
