--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,6 +3,15 @@ events {
 }
 
 http {
+    upstream frontend {
+        server client:80;
+    }
+
+    upstream backend {
+        server server:8000;
+    }
+
+    # HTTP -> Redirect sang HTTPS
     server {
         listen 80;
         server_name brainity.duckdns.org;
@@ -12,7 +21,60 @@ http {
         }
 
         location / {
-            return 200 "Temporary HTTP server for Certbot\n";
+            return 301 https://$host$request_uri;
+        }
+    }
+
+    # HTTPS server
+    server {
+        listen 443 ssl;
+        http2 on;
+        server_name brainity.duckdns.org;
+
+        ssl_certificate /etc/letsencrypt/live/brainity.duckdns.org/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/brainity.duckdns.org/privkey.pem;
+
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
+
+        # React SPA
+        location / {
+            proxy_pass http://frontend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # API
+        location /api/ {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        # Uploads
+        location /uploads/ {
+            proxy_pass http://backend;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+        }
+
+        # WebSocket
+        location /socket.io/ {
+            proxy_pass http://backend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+
+            proxy_read_timeout 600s;
+            proxy_send_timeout 600s;
         }
     }
 }
