--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,11 +4,11 @@ events {
 
 http {
     upstream frontend {
-        server client:80;
+        server brainity-client:80;
     }
 
     upstream backend {
-        server server:8000;
+        server brainity-server:8000;
     }
 
     # HTTP -> Redirect sang HTTPS
@@ -44,6 +44,9 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+
+            index index.html;
+            error_page 404 /index.html;
         }
 
         # API
