--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,10 +3,6 @@ events {
 }
 
 http {
-    upstream frontend {
-        server brainity-client:80;
-    }
-
     upstream backend {
         server brainity-server:8000;
     }
@@ -37,16 +33,11 @@ http {
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
 
-        # React SPA
+        # React SPA (serve build trực tiếp)
         location / {
-            proxy_pass http://frontend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
+            root /usr/share/nginx/html;
             index index.html;
-            error_page 404 /index.html;
+            try_files $uri /index.html;
         }
 
         # API
