--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,74 +1,48 @@
-events {
-    worker_connections 1024;
-}
+server {
+    listen 443 ssl;
+    http2 on;
+    server_name brainity.duckdns.org;
 
-http {
-    upstream backend {
-        server brainity-server:8000;
+    ssl_certificate /etc/letsencrypt/live/brainity.duckdns.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/brainity.duckdns.org/privkey.pem;
+
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
+
+    # React SPA (serve build trực tiếp)
+    location / {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/ /index.html;
     }
 
-    # HTTP -> Redirect sang HTTPS
-    server {
-        listen 80;
-        server_name brainity.duckdns.org;
-
-        location /.well-known/acme-challenge/ {
-            root /var/www/certbot;
-        }
-
-        location / {
-            return 301 https://$host$request_uri;
-        }
+    # API
+    location /api/ {
+        proxy_pass http://backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # HTTPS server
-    server {
-        listen 443 ssl;
-        http2 on;
-        server_name brainity.duckdns.org;
+    # Uploads
+    location /uploads/ {
+        proxy_pass http://backend;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 
-        ssl_certificate /etc/letsencrypt/live/brainity.duckdns.org/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/brainity.duckdns.org/privkey.pem;
+    # WebSocket
+    location /socket.io/ {
+        proxy_pass http://backend;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
 
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384;
-
-        # React SPA (serve build trực tiếp)
-        location / {
-            root /usr/share/nginx/html;
-            index index.html;
-            try_files $uri /index.html;
-        }
-
-        # API
-        location /api/ {
-            proxy_pass http://backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
-
-        # Uploads
-        location /uploads/ {
-            proxy_pass http://backend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-        }
-
-        # WebSocket
-        location /socket.io/ {
-            proxy_pass http://backend;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
-            proxy_read_timeout 600s;
-            proxy_send_timeout 600s;
-        }
+        proxy_read_timeout 600s;
+        proxy_send_timeout 600s;
     }
 }
