--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -13,7 +13,9 @@ server {
 
     # Handle React Router
     location / {
-        try_files $uri $uri/ /index.html;
+        root /usr/share/nginx/html;
+        index index.html;
+        try_files $uri $uri/ /index.html =404;
     }
 
     # Cache static assets
