--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
     "aos": "^2.3.4",
     "apexcharts": "^3.49.1",
     "axios": "^1.6.8",
